syntax = "proto3";

package kdb;

option java_package = "kdb.proto";
option java_outer_classname = "XMessage";

message Message {

  enum MessageType {
    Get = 0;
    Insert = 1;
    Update = 2;
    Delete = 3;
    Create = 4;
    Drop = 5;
    Response = 6;
    Log = 7;
  }

  MessageType type = 1;
  GetOperation getOp = 2;
  InsertOperation insertOp = 3;
  UpdateOperation updateOp = 4;
  DeleteOperation deleteOp = 5;
  CreateOperation createOp = 6;
  DropOperation dropOp = 7;
  Response response = 8;
  LogOperation logOp = 9;
}

message Response {
  enum Type {
    OK = 0;
    Error = 1;
    Retry = 2;
    Log = 3;
  }
  Type type = 1;
  string reason = 2;
  string token = 3;
  int32 lsnfile = 4;
  int32 lsnoffset = 5;
  repeated bytes keys = 6;
  repeated bytes values = 7;
}

message GetOperation {
  enum Type {
    Equal = 0;
    GreaterEqual = 1;
    LessEqual = 2;
    Between = 3;
    Done = 4;
  }

  Type op = 1;
  string table = 2;
  string token = 3;
  int32 limit = 4;
  bytes key = 5;
  bytes key2 = 6;
}

message InsertOperation {
  string table = 1;
  repeated bytes keys = 2;
  repeated bytes values = 3;
}

message UpdateOperation {
  string table = 1;
  repeated bytes keys = 2;
  repeated bytes values = 3;
}

message DeleteOperation {
  string table = 1;
  repeated bytes keys = 2;
}

message CreateOperation {
  string table = 1;
}

message DropOperation {
  string table = 1;
}

message LogOperation {
  int64 epoch = 1;
  int64 xid = 2;
  int32 lsnfile = 3;
  int64 lsnoffset = 4;
  string uri = 5;
  string table = 6;
}